--- a/src/index.css
+++ b/src/index.css
@@ -2,132 +2,62 @@
 @tailwind components;
 @tailwind utilities;
 
-.dndflow {
-  flex-direction: column;
-  display: flex;
-  flex-grow: 1;
-  height: 100%;
-}
 
-/* .dndflow aside {
-  border-right: 1px solid rgb(186, 26, 26);
-  padding: 15px 10px;
-  font-size: 12px;
-  background: #751111;
-} */
-
-/* .dndflow aside .description {
-  margin-bottom: 10px;
-} */
-
-/* .dndflow .dndnode {
-  height: 20px;
-  padding: 4px;
-  border: 1px solid #d7d6e2;
-  border-radius: 2px;
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: grab;
-} */
-
-.dndflow .dndnode.input {
-  border-color: #0041d0;
-}
-
-/* .dndflow .dndnode.output {
-  border-color: #ff0072;
-} */
-
-.dndflow .reactflow-wrapper {
-  flex-grow: 1;
-  height: 100%;
-}
-
-.dndflow .selectall {
-  margin-top: 10px;
-}
-
-@media screen and (min-width: 768px) {
   .dndflow {
-    flex-direction: row;
+    flex-direction: column;
+    display: flex;
+    flex-grow: 1;
+    height: 100%;
   }
-
-  .dndflow aside {
-    width: 20%;
-    max-width: 250px;
-  }
-}
-
-
-
-
-
-
-
-/* overview.css */
-.react-flow__node-custom {
-  font-size: 10px;
-  width: 180px;
-  background: #f5f5f6;
-  color: #222;
-  /* box-shadow: 0 4px 6px -1px rgba(16, 129, 84, 0.15), 0 2px 4px -1px rgb(0 0 0 / 8%); */
-  border-radius: 2px;
-}
-
-.react-flow__node-custom .react-flow__handle {
-  top: 24px;
-  right: -15px;
-  width: 6px;
-  height: 10px;
-  border-radius: 2px;
-  background-color: #019931;
-}
-
-.react-flow__node.circle {
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 700;
-}
-
-.react-flow__node.annotation {
-  border-radius: 0;
-  text-align: left;
-  background: rgb(131, 9, 9);
-  border: none;
-  line-height: 1.4;
-  width: 225px;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 15%), 0 2px 4px -1px rgb(0 0 0 / 8%);
-}
-
-.react-flow__node.annotation .react-flow__handle {
-  display: none;
-
-}
-
-.custom-node__header {
-  padding: 8px 10px;
-  border-bottom: 1px solid #e2e8f0;
-}
-
-.custom-node__body {
-  padding: 10px;
   
-}
-
-.custom-node__select {
-  position: relative;
-  margin-bottom: 10px;
-
-}
-
-.custom-node__select select {
-  width: 100%;
-  margin-top: 5px;
-  font-size: 10px;
-}
+  .dndflow aside {
+    border-right: 1px solid rgb(134, 5, 5);
+    /* padding: 15px 10px;/ */
+    /* font-size: 12px; */
+    background: #fcfcfc;
+  }
+  
+  .dndflow aside .description {
+    /* margin-bottom: 10px; */
+  }
+  
+  .dndflow .dndnode {
+    height: 20px;
+    padding: 4px;
+    border: 1px solid #14106d;
+    border-radius: 2px;
+    /* margin-bottom: 10px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: grab;
+  }
+  
+  .dndflow .dndnode.input {
+    border-color: #0041d0;
+  }
+  
+  .dndflow .dndnode.output {
+    border-color: #ff0072;
+  }
+  
+  .dndflow .reactflow-wrapper {
+    flex-grow: 1;
+    height: 100%;
+  }
+  
+  .dndflow .selectall {
+    margin-top: 10px;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .dndflow {
+      flex-direction: row;
+    }
+  
+    .dndflow aside {
+      width: 20%;
+      max-width: 250px;
+    }
+  }
+  
